--- a/Song.html
+++ b/Song.html
@@ -3,11 +3,50 @@
 <head>
     <meta charset="UTF-8"/>
     <title>Hogwarts Song</title>
+    <link rel="stylesheet" type="text/css" href="http://bonozoa.dothome.co.kr/default.css">
+    <link rel="stylesheet" type="text/css" href="http://bonozoa.dothome.co.kr/HogwartsSchool.css"> 
+    <script type="text/javascript" src="http://bonozoa.dothome.co.kr/HogwartsSchool.js"></script>
 </head>
 <body>
-    <!-- 교가 -->
-    <h1>교가</h1>
-    <iframe width="300" height="550" src="https://www.youtube.com/embed/10zfUhC4c-A?start=8" 
-    title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <header>
+        <h1><a href="http://bonozoa.dothome.co.kr/HogwartsSchool.html"><img src="http://bonozoa.dothome.co.kr/top_logo.png" alt="호그와트"></a></h1>
+        <h2 class="hide">대메뉴</h2>
+        <div id="inb">
+            <nav>
+                <ul>
+                <li><a href="#a">학교소개</a>
+                    <ul>
+                    <li><a href="http://bonozoa.dothome.co.kr/SchoolInt/Song.html">교가</a></li>
+                    <li><a href="javascript:password();">학교지도</a></li>
+                    </ul>
+                </li>
+                <li><a href="#a">학부소개</a>
+                    <ul>
+                    <li><a href="http://dltk456.dothome.co.kr//Hogwarts/Class.html">수업소개</a></li>
+                    <li><a href="http://jju0love.dothome.co.kr/HogwartProfessors.html">교수진소개</a></li>
+                    <li><a href="http://jju0love.dothome.co.kr/Hogwart.html">기숙사소개</a></li>
+                    </ul>
+                </li>
+                <li><a href="#a">학부미리보기</a>
+                    <ul>
+                     <li><a href="http://shinheejin.dothome.co.kr/HarryPotter2.html">학부미리보기</a></li>
+                    </ul>
+                </li>
+                <li><a href="#a">공지사항</a>
+                    <ul>
+                    <li><a href="http://dltk456.dothome.co.kr//Hogwarts/Notice.html">공지사항</a></li>
+                    </ul>
+                </li>
+                </ul>
+            </nav>
+            </div>
+            <div class="visual"><img src="http://bonozoa.dothome.co.kr/show2.png" alt=""></div><!--show뒤에 숫자 각자 파트에 맞춰서 숫자 바꿔줘-->
+            <!--<서원>홈화면:1 교가:2 지도:3 <문용>수업소개:4 공지사항:5 <주영>교수진소개:6 기숙사소개:7 <희진>학부미리보기:8-->
+    </header>
+    <main>
+        <h1>교가</h1>
+        <iframe width="400" height="800" src="https://www.youtube.com/embed/10zfUhC4c-A?start=8" 
+        title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </main>
 </body>
 </html>
