--- a/Song.html
+++ b/Song.html
@@ -6,6 +6,12 @@
     <link rel="stylesheet" type="text/css" href="http://bonozoa.dothome.co.kr/default.css">
     <link rel="stylesheet" type="text/css" href="http://bonozoa.dothome.co.kr/HogwartsSchool.css"> 
     <script type="text/javascript" src="http://bonozoa.dothome.co.kr/HogwartsSchool.js"></script>
+    <style>
+        body {
+            background-color: rgb(75, 73, 71);
+        }
+        main h1{text-align: center; color:#fff; background-color: #811924; font-size: 30px;}
+    </style>
 </head>
 <body>
     <header>
@@ -44,9 +50,10 @@
             <!--<서원>홈화면:1 교가:2 지도:3 <문용>수업소개:4 공지사항:5 <주영>교수진소개:6 기숙사소개:7 <희진>학부미리보기:8-->
     </header>
     <main>
-        <h1>교가</h1>
-        <iframe width="400" height="800" src="https://www.youtube.com/embed/10zfUhC4c-A?start=8" 
-        title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <h1>호그와트 교가</h1>
+        <p align="middle">
+            <iframe width="1000" height="2000" src="https://www.youtube.com/embed/10zfUhC4c-A?autoplay=1&mute=1 "  title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </p>
     </main>
 </body>
 </html>
