--- a/Domitory.html
+++ b/Domitory.html
@@ -7,48 +7,47 @@
         <link rel="stylesheet" type="text/css" href="http://bonozoa.dothome.co.kr/HogwartsSchool.css"> <!--http://bonozoa.dothome.co.kr/HogwartsSchool.css-->
         <script type="text/javascript" src="http://bonozoa.dothome.co.kr/HogwartsSchool.js"></script>
         <style>
-
-          main {
+        body{
             background-color: rgb(75, 73, 71);
         }
 
-        #top {
+        main #top {
             text-align: left;
         }
 
-        #middle {
+        main #middle {
             overflow: hidden;
             margin: 20px 0;
             padding: 20px 0;
             border: 3px solid brown;
         }
 
-        #bottom {
+        main #bottom {
             overflow: hidden;
          }
 
-        .dormi_main {
+        main .dormi_main {
             width: 400px; float: left;
             margin-right: 10px; margin-bottom: 5px;
         }
 
-        .dormi_mark {
+        main .dormi_mark {
             width: 300px; float: left;
             margin: 5px;
             border: 3px solid brown;
         }
 
-        .dormi_show {
+        main .dormi_show {
             width: 450px; float: left;
             margin: 5px;
             border: 3px solid brown;
         }
 
-        div > img {
+       main div > img {
             max-width: 100%; height: auto;
         }  
 
-        .introduce {
+        main .introduce {
             font-weight: 450;
             font-size: 1.5em;
             color: white;
@@ -77,7 +76,7 @@
                     </li>
                     <li><a href="#a">대도서관</a>
                         <ul>
-                         <li><a href="http://shinheejin.dothome.co.kr/HarryPotter2.html">학부미리보기</a></li>
+                         <li><a href="http://shinheejin.dothome.co.kr/HarryPotter2.html">대도서관</a></li>
                         </ul>
                     </li>
                     <li><a href="#a">공지사항</a>
@@ -88,7 +87,7 @@
                     </ul>
                 </nav>
                 </div>
-                <div class="visual"><img src="http://bonozoa.dothome.co.kr/show7.png" alt="7"></div><!--show뒤에 숫자 각자 파트에 맞춰서 바꿔줘-->
+                <div class="visual"><img src="http://bonozoa.dothome.co.kr/show7.png" alt=""></div><!--show뒤에 숫자 각자 파트에 맞춰서 바꿔줘-->
                 <!--<서원>홈화면:1 교가:2 지도:3 <문용>수업소개:4 공지사항:5 <주영>교수진소개:6 기숙사소개:7 <희진>학부미리보기:8-->
         </header>
         <main>
