--- a/Notice.html
+++ b/Notice.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8"/>
-        <title>Welcome to Hogwarts</title>
+        <title>Notice-Hogwarts</title>
         <link rel="stylesheet" type="text/css" href="http://bonozoa.dothome.co.kr/default.css">
         <link rel="stylesheet" type="text/css" href="http://bonozoa.dothome.co.kr/HogwartsSchool.css"> <!--http://bonozoa.dothome.co.kr/HogwartsSchool.css-->
         <script type="text/javascript" src="http://bonozoa.dothome.co.kr/HogwartsSchool.js"></script>
@@ -12,6 +12,9 @@
                     margin: 0 auto;                 
                 }
             main h1{text-align: center; color:#fff; background-color: #811924; font-size: 30px;}      
+            #notice li a:hover{
+                color: rgb(222, 167, 135);
+            }
             #notice ul {
                     margin: auto;
                     width: 1250px;
@@ -47,6 +50,12 @@
                    display: inline-block; 
                    width: 30px;
                     }
+            .number li:first-child a{
+                color: rgb(95, 22, 22);
+            }
+            .number li a:hover {
+                color: rgb(95, 22, 22);
+            }
         </style>
     </head>
     <body><!--헤더안에 각자 수정할 부분 한군데 있음-->
@@ -88,6 +97,7 @@
         <main>
             <div id="notice">
                 <h1>공지사항</h1>
+                <br>
                 <br>
                 <ul>
                     <li>내용<span>날짜</span></li>
