--- a/Notice.html
+++ b/Notice.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" type="text/css" href="http://bonozoa.dothome.co.kr/HogwartsSchool.css"> <!--http://bonozoa.dothome.co.kr/HogwartsSchool.css-->
         <script type="text/javascript" src="http://bonozoa.dothome.co.kr/HogwartsSchool.js"></script>
         <style>
+            main a { color: rgba(255, 248, 220, 0.651);}
             body {
                     background-color: rgb(75, 73, 71);
                     margin: 0 auto;                 
