--- a/Domitory.html
+++ b/Domitory.html
@@ -7,51 +7,80 @@
         <link rel="stylesheet" type="text/css" href="http://bonozoa.dothome.co.kr/HogwartsSchool.css"> <!--http://bonozoa.dothome.co.kr/HogwartsSchool.css-->
         <script type="text/javascript" src="http://bonozoa.dothome.co.kr/HogwartsSchool.js"></script>
         <style>
-        body{
+        main {
             background-color: rgb(75, 73, 71);
         }
 
-        main #top {
-            text-align: left;
+        main div > img {
+            max-width: 100%; height: auto;
+        }  
+
+        main #top {text-align: center; color:#fff; background-color: #811924; font-size: 30px;}
+
+        main header {
+            background-color: rgb(241, 241, 241, 0.3);
+            margin: 20px 30px; padding: 30px 30px;
+            text-align: center;
+            color: black;
+            font-size: 30px;
         }
 
+        #section1 {
+            overflow: hidden;
+            margin: 0 auto;
+            width: 1300px;
+        }
+
+        #section2 {
+            overflow: hidden;
+            margin: 0 auto;
+            width: 1680px;
+        }
+
+        main article {
+            overflow: hidden;
+            width: 970px;
+            margin: 0 auto;
+            background-color: rgb(35,26,52,0.4);
+        }
+        
         main #middle {
             overflow: hidden;
-            margin: 20px 0;
-            padding: 20px 0;
+            width: 1280px;
             border: 3px solid brown;
         }
 
-        main #bottom {
-            overflow: hidden;
-         }
-
         main .dormi_main {
-            width: 400px; float: left;
-            margin-right: 10px; margin-bottom: 5px;
+            width: 800px; float: left;
+            margin-right: 10px;
         }
 
         main .dormi_mark {
             width: 300px; float: left;
-            margin: 5px;
-            border: 3px solid brown;
+            background-color:rgb(35,26,52,0.4);
+            margin-right: 8px;
         }
 
         main .dormi_show {
-            width: 450px; float: left;
-            margin: 5px;
-            border: 3px solid brown;
+            width: 450px; height: 340px; float: left;
+            margin: 13px;
+            border: 2px solid brown;
         }
-
-       main div > img {
-            max-width: 100%; height: auto;
-        }  
 
         main .introduce {
             font-weight: 450;
             font-size: 1.5em;
             color: white;
         }
+
+        main .s2_text {
+            width: 1675px;
+            height: 337px;
+            background-color: rgb(241, 241, 241, 0.3);
+            box-shadow: 5px 5px 7px;
+            color: black;
+        }
+
         </style>
     </head>
     <body><!--헤더안에 각자 수정할 부분 한군데 있음-->
@@ -91,27 +120,111 @@
                 <!--<서원>홈화면:1 교가:2 지도:3 <문용>수업소개:4 공지사항:5 <주영>교수진소개:6 기숙사소개:7 <희진>학부미리보기:8-->
         </header>
         <main>
-            <div id="top">
-                <h2>기숙사 소개</h2>
+            <h1 id="top">기숙사 소개</h1>
+            <header>호그와트 기숙사는 어떤 곳인가요?</header>
+
+            <div id="section1">
+                <div id="middle">
+                    <div class="dormi_main"><img src="기숙사내부1.jpg"></div>
+                    <p class="introduce">호그와트 대학교 학생들에게 쾌적한 주거시설 및 편의시설, 최첨단 시스템을 제공하여 학업 성취도를 높이고 공동생활의 기본의식을 고취시키기 위하여 건립된 기숙사입니다.<br><br>학교가 설립된 초창기와 함께 개관한 기숙사는 학생들에게 쾌적한 주거시설 및 편의시설, 최첨단 시스템을 제공하여 학업 성취도를 높이고 공동생활의 기본의식을 고취시키기 위하여 건립된 기숙사입니다. 기숙사 배정식 날 모든 학생 여러분은 마법의 분류모자에 의해 학생 한 명 한 명의 특성에 가장 적합한 기숙사를 배정받을 수 있습니다. 연면적 8,805평 규모의 생활관은 다양한 형태의 호실을 통해 학생들의 요구에 부합하는 서비스를 제공합니다. 또한 호별 냉장고 제공, 세면실, 화장실 호실 내 설치로 사생들의 독립성을 최대한 보장하며, 기숙사내 다목적실, 자율학습실, 마법시행실, 세탁실 등을 설치하여 최고의 주거편의성을 누릴 수 있도록 하였습니다. 특히 최첨단의 출입통제시스템을 통해 입사생들의 안전하고 쾌적한 생활이 보장될 수 있도록 하였습니다</p>
+                </div>
             </div>
-            <div id="middle">
-                <div class="dormi_main"><img src="기숙사내부1.jpg"></div>
-                <p class="introduce">호그와트 대학교 학생들에게 쾌적한 주거시설 및 편의시설, 최첨단 시스템을 제공하여 학업 성취도를 높이고 공동생활의 기본의식을 고취시키기 위하여 건립된 기숙사입니다.<br><br>학교가 설립된 초창기와 함께 개관한 기숙사는 학생들에게 쾌적한 주거시설 및 편의시설, 최첨단 시스템을 제공하여 학업 성취도를 높이고 공동생활의 기본의식을 고취시키기 위하여 건립된 기숙사입니다. 기숙사 배정식 날 모든 학생 여러분은 마법의 분류모자에 의해 학생 한 명 한 명의 특성에 가장 적합한 기숙사를 배정받을 수 있습니다. 연면적 8,805평 규모의 생활관은 다양한 형태의 호실을 통해 학생들의 요구에 부합하는 서비스를 제공합니다. 또한 호별 냉장고 제공, 세면실, 화장실 호실 내 설치로 사생들의 독립성을 최대한 보장하며, 기숙사내 다목적실, 자율학습실, 마법시행실, 세탁실 등을 설치하여 최고의 주거편의성을 누릴 수 있도록 하였습니다. 특히 최첨단의 출입통제시스템을 통해 입사생들의 안전하고 쾌적한 생활이 보장될 수 있도록 하였습니다</p>
-            </div>
-            <ul><li>기숙사</li></ul>
-            <div id="bottom">
-                <div class="dormi_mark"><img  src="Gryffindor.png" show></div>
-                <div class="dormi_show"><img  src="그리핀도르내부.jpg"></div>
-                <br>
+            <div style="margin: 40px;"></div>
+            <div id="section2">
+                <div class="dormi_mark"><img  src="Gryffindor.png"></div>
+                <div class="s2_text">
+                    <h1 style="font-size: 2em; text-shadow: 3px 3px 5px red;">그리핀도르</h1>
+                    <h2 style="font-size: 1.5em; text-shadow: 3px 3px 5px red;">용감하고 대담한 자를 위한 기숙사</h2>
+                    <br>
+                    <p style="font-size: 20px;">그리핀도르 기숙사에 온 것을 환영해.
+                        우리의 상징은 동물 중에서 가장 위대한 사자야.
+                        우리 기숙사의 색은 진홍색과 금색이고 우리 기숙사 휴게실은 그리핀도르 탑에 있어.
+                        여기는 간단히 말하자면 호그와트에서 가장 좋은 기숙사야.
+                        여기는 가장 용감하고 대담한 사람들이 모인 곳이야.
+                        예를 들면 알버스 덤블도어!
+                        맞아! 덤블도어 말야. 우리 시대 가장 위대한 마법사가 그리핀도르 출신이야!
+                        만약 이 사실로도 소개가 충분하지 않다면...나도 모르겠다.
+                        난 오래 노닥거릴 시간이 없어!
+                        호그와트에서의 시간을 즐기도록 해.
+                        어떻게 안 그러겠어? 우리 학교에서 가장 좋은 기숙사에 들어오게 됐는데.
+                        </p>
+                </div>
+                <div style="margin: 25px;"></div>
                 <div class="dormi_mark"><img  src="Slytherin.png"></div>
-                <div class="dormi_show"><img  src="슬리데린내부.jpg"></div>
-                <br>
+                <div class="s2_text">
+                    <h1 style="font-size: 2em; text-shadow: 3px 3px 5px green;">슬리데린</h1>
+                    <h2 style="font-size: 1.5em; text-shadow: 3px 3px 5px green;">재간꾼들을 위한 기숙사</h2>
+                    <br>
+                    <p style="font-size: 20px;">슬리데린 기숙사에 온 것을 환영해.
+                        우리의 상징은 가장 지혜로운 동물인 뱀이야.
+                        우리 기숙사 색깔은 녹색과 은색이고 우리 기숙사 휴게실은 지하감옥에 숨겨진 입구 뒤에 있어.
+                        보면 알겠지만 창 밖으로 보이는 건 호그와트 호수의 심연이야.
+                        우리는 종종 대왕오징어가 휙 지나가는 걸 보기도 해. 그리고 때로는 더 흥미로운 생물도 있지.
+                        우리 기숙사는 신비로운 심해의 조난선 같은 분위기야. 우리는 슬리데린의 명예를 신경쓰기 때문에 경쟁심이 강하고 야망이 높아.
+                        그리고 우리는 슬리데린 출신들을 존경해. 물론 어둠의 마법사 때문에 공포의 기미가 보이기도 하지만
+                        조금 색다른 길로 유명한 것도 나름 재밌어. 네가 도서관에 있는 모든 저주 주문을 독파했다는 척을 하면,
+                        아무도 네 필통에 장난을 치진 못할거야. 네가 슬리데린 기숙사 출신이기 때문에.
+                        그치만 우린 나쁜 마법사는 아니야. 우리는 우리 상징인 뱀과 닮았어.
+                        날렵하고, 강하지만 종종 오해를 받지.뭐, 이 정도면 다 말한 것 같아. 너는 분명 우리 기숙사를 좋아하게 될거야.
+                        우리는 은색 실로 수놓아진 이불을 덮고, 초록색 실크가 네 개의 기둥에서 매달린 침대에서 잠을 자.
+                        유명한 슬리데린들의 모험이 그려져 있는 중세의 융단이 벽에 걸려 있고, 천장에는 은빛 램프가 걸려 있어. 아마 잠이 잘 올거야.
+                        밤에 호수의 물이 창문에 철썩거리는 소리를 들으면 마음이 진정되거든. 뭐, 이 정도면 다 말한 것 같아. 너는 분명 우리 기숙사를 좋아하게 될거야.
+                        </p>
+                </div>
+                <div style="margin: 20px;"></div>
                 <div class="dormi_mark"><img  src="Ravenclaw.png"></div>
-                <div class="dormi_show"><img  src="레번클로내부.jpg"></div>
-                <br>
+                <div class="s2_text">
+                    <h1 style="font-size: 2em; text-shadow: 3px 3px 5px skyblue;">래번클로</h1>
+                    <h2 style="font-size: 1.5em; text-shadow: 3px 3px 5px skyblue;">현명하고 사려 깊은 자들을 위한 기숙사</h2>
+                    <br>
+                    <p style="font-size: 19px;">래번클로에 온 것을 환영해.
+                        우리의 상징은 독수리야. 다른 것들이 기어올라올 수 없는 곳까지 높이 날 수 있지.
+                        우리 기숙사의 색깔은 파랑과 청동빛이고, 우리 기숙사 휴게실은 래번클로 탑의 마법에 걸린 문고리 뒤에 있어.
+                        원형의 휴게실 벽에는 아치형 창문이 있어서 학교 운동장, 금지된 숲, 퀴디치 경기장, 정원을 내려다볼 수 있어.
+                        다른 어떤 기숙사에서도 이렇게 끝내주는 풍경을 볼 수 없지. 딱히 자랑하려는 건 아니지만 래번클로는 가장 똑똑한 마법사들이 들어오는 기숙사야.
+                        우리 기숙사 창립자인 로웨나 래번클로는 다른 무엇보다 배움을 가장 높게 평가했고 우리도 역시 그래.
+                        휴게실로 들어가는 입구를 감춘 다른 기숙사들과 다르게 우리는 그런게 필요없어.
+                        우리 기숙사 휴게실로 통하는 문은 엄청 높고 구불구불한 계단 위에 있거든.
+                        문에는 손잡이가 없고 마법에 걸린 독수리 모양의 청동 문고리가 있지.
+                        네가 문을 두드리면 문고리가 질문을 할 거야. 만약 맞는 답변을 한다면 들어올 수 있어.
+                        이런 간단한 방법으로 우리 기숙사에는 거의 1000년간 래번클로 빼고는 아무도 들어오지 못했지.
+                        몇몇 신입생들은 독수리의 질문에 대답하기를 무서워하는데, 걱정하지 마.
+                        래번클로들은 빨리 배우거든. 너는 곧 문에 도전하는 것을 즐기게 될거야.
+                        너는 분명 밤에 잘 잘거야. 우리 기숙사는 가장 큰 탑에 있어. 하늘색 실크이불로 덮인 네 개의 기둥이 달린 침대와 창문을 스치는 바람소리는 정말 진정되지.
+                        다시 한 번 말하지만, 호그와트에서 가장 똑똑하고, 별나고 흥미로운 기숙사에 들어오다니. 잘했어!
+                        </p>
+                </div>
+                <div style="margin: 20px;"></div>
                 <div class="dormi_mark"><img  src="Hufflepuff.png"></div>
-                <div class="dormi_show"><img  src="허플퍼프내부.jpg"></div>
+                <div class="s2_text">
+                    <h1 style="font-size: 2em; text-shadow: 3px 3px 5px yellow;">허플푸프</h1>
+                    <h2 style="font-size: 1.5em; text-shadow: 3px 3px 5px yellow;">성실하고 진실된 자들을 위한 기숙사</h2>
+                    <br>
+                    <p style="font-size: 20px;">후플푸프 기숙사에 온 걸 환영해. 우리의 상징은 오소리야.
+                        종종 과소평가 받는 동물이지. 왜냐하면 공격을 받기 전까진 조용하고 친절하기 때문이야.
+                        하지만 공격을 받으면, 늑대처럼 자기보다 큰 동물도 싸워서 이겨낼 수 있어.
+                        우리 기숙사 색은 노랑과 검정이고 우리 기숙사 휴게실은 연회장 옆 1층에 있어. 후플푸프는 신뢰감 넘치고 성실해. 우리는 함부로 가볍게 입을 놀리지 않지만
+                        네가 위험에 처한다면 우리는 화가 날거야. 우리 상징 오소리처럼 말이야.
+                        우리는 우리에게 맞서는 모든 자들로부터 친구들과 가족들과 스스로를 보호할 거야. 내 생각에 이정도면 다 말한 것 같아. 정말이지 나는 너희 중 몇 명이 좋은 퀴디치 선수였으면 좋겠어.
+                        후플푸프는 최근 퀴디치 시합에서 좋은 성적을 내지 못했거든.
+                        그럼 편히 자도록 해. 우리는 태풍으로부터 안전하니까, 기숙사에서는 긴장을 풀어.
+                        그리핀도르나 래번클로 같이 탑에 사는 애들은 때때로 잘 때 방해를 받곤 하지만
+                        우리는 한 번도 그런 일이 없어.
+                        그럼 다시 한 번 축하해. 가장 친절하고 품위있고 끈기있는 기숙사의 멤버가 된 것을 환영해.
+                        </p>
+                </div>
             </div>
+
+            <div style="margin: 40px;"></div>
+            
+            <header>호그와트 기숙사의 멋진 풍경</header>
+            <article>
+                <div class="dormi_show"><img  src="그리핀도르내부.jpg"></div>
+                <div class="dormi_show"><img  src="슬리데린내부.jpg"></div>
+                <div class="dormi_show"><img  src="레번클로내부.jpg"></div>
+                <div class="dormi_show"><img  src="허플퍼프내부.jpg"></div>
+                <div style="width: 900px; margin: 10px; float: left; border: 3px solid brown;"><img src="Gryffindor_Inside.png"></div>
+            </article>
         </main>
     </body>
 </html>
